--- a/wayne_test_page.html
+++ b/wayne_test_page.html
@@ -1,35 +1,11 @@
-<link href="wayne_test.css" rel="stylesheet"></link>
 
 
-# Let's make the Web prettier.
-
-Markdown.css is better default styling for your Markdown files. It's heavily
-inspired by the [Space](http://getspace.org) WordPress theme. This page is
-itself a Markdown file using the `markdown.css` stylesheet. View the source
-code [here](http://kevinburke.bitbucket.org/markdowncss/index.md).
-
-### Sample File
-
-View a sample file that implements most of the Markdown spec
-[here](http://kevinburke.bitbucket.org/markdowncss/sample.html).
-
-### Get Started
-
-Just add the following line to the top of your `.markdown`
-files:
-
-    <link href="http://kevinburke.bitbucket.org/markdowncss/markdown.css" rel="stylesheet"></link>
-
-##### Note:
-    
-For the markdown to parse correctly, you need to add the closing `<link>`
-tag. This is not technically correct HTML, but it will parse in any browser.
 
 
 <!DOCTYPE html>
 <html lang="en"><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-
+<link rel="stylesheet" href="stylesheets/core.css" media="screen"/>
     <meta charset="UTF-8">
 
 	<meta http-equiv="X-UA-Compatible" content="chrome=1">
